fix(ui): improve dark mode colors and consistency

--- a/ui/src/app/settings/components/settings-overview/settings-overview.scss
+++ b/ui/src/app/settings/components/settings-overview/settings-overview.scss
@@ -21,7 +21,10 @@
 
         &:hover {
             @include themify($themes) {
-                background-color: themed('light-argo-teal-1');                               
+                background-color: themed('light-argo-teal-1');
+            }
+            .theme-dark & {
+                background-color: rgba($argo-color-teal-5, 0.1);
             }
         }
 
